--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "ddgs>=9.4.1",
     "dotenv>=0.9.9",
+    "duckduckgo-search>=8.1.1",
+    "ipython>=9.4.0",
+    "langchain-community>=0.3.27",
+    "langchain-tavily>=0.2.10",
     "langchain[openai]>=0.3.26",
     "langgraph>=0.5.4",
 ]
